# python-module-boilerplate

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  test.yml
scripts/: eject.py  init_boilerplate.py
src/python_module_boilerplate/: __init__.py
tests/: test_unicorn.py
