[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-module-boilerplate"
version = "0.0.0"
description = "My nifty Python module"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
keywords = ["boilerplate", "template"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3",
]

[project.urls]
Homepage = "https://github.com/your-username/python-module-boilerplate"
Issues = "https://github.com/your-username/python-module-boilerplate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/python_module_boilerplate"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=python_module_boilerplate --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["python_module_boilerplate"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src", "tests"]
